Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
               um zu merken, wie sehr einem ein Mensch fehlen kann.
             </p>
             <p class="tile-hero-sub">
-              Und gleichzeitg ist es eine Menge Zeit, um tolle neue Erinnerungen zu schaffen.
+              Und gleichzeitig ist es eine Menge Zeit, um tolle neue Erinnerungen zu schaffen.
             </p>
           </div>
         </article>
